--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>Spotify</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -15,7 +12,71 @@
             <li>About</li>
         </ul>
     </nav>
-    <div class="container"></div>
+    <div class="container">
+        <div class="songList">
+            <h1>Best of Jubin</h1>
+            <div class="songItemContainer">
+                <div class="songItem">
+                    <img src="jadui.jpeg" alt="1">
+                    <span>Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                </div>
+                <div class="songItem">
+                    <img src="jadui.jpeg" alt="1">
+                    <span>Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                </div>
+                <div class="songItem">
+                    <img src="jadui.jpeg" alt="1">
+                    <span>Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                </div>
+                <div class="songItem">
+                    <img src="jadui.jpeg" alt="1">
+                    <span>Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                </div>
+                <div class="songItem">
+                    <img src="jadui.jpeg" alt="1">
+                    <span>Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                </div>
+                <div class="songItem">
+                    <img src="jadui.jpeg" alt="1">
+                    <span>Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                </div>
+                <div class="songItem">
+                    <img src="jadui.jpeg" alt="1">
+                    <span>Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                </div>
+                <div class="songItem">
+                    <img src="jadui.jpeg" alt="1">
+                    <span>Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                </div>
+                <div class="songItem">
+                    <img src="jadui.jpeg" alt="1">
+                    <span>Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                </div>
+            </div>
+        </div>
+        <div class="songBanner"></div>
+    </div>
+    <div class="bottom">
+        <input type="range" name="range" id="myProgressBar" min="0" max="100">
+        <div class="icons">
+            <i class="fa-2x fa-solid fa-backward"></i>
+            <i class="fa-2x fa-regular fa-circle-play"></i>
+            <i class="fa-2x fa-solid fa-forward"></i>
+        </div>
+        <div class="songInfo">
+            -Jaadui(Jubin Nautiyal)
+        </div>
+    </div>
+    <script src="https://kit.fontawesome.com/7fd55a2e46.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
