--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <input type="range" name="range" id="myProgressBar" min="0" max="100">
         <div class="icons">
             <i class="fa-2x fa-solid fa-backward"></i>
-            <i class="fa-2x fa-regular fa-circle-play"></i>
+            <i class="fa-2x fa-regular fa-circle-play" id="masterPlay"></i>
             <i class="fa-2x fa-solid fa-forward"></i>
         </div>
         <div class="songInfo">
