--- a/index.html
+++ b/index.html
@@ -17,63 +17,68 @@
             <h1>Best of Jubin</h1>
             <div class="songItemContainer">
                 <div class="songItem">
-                    <img src="jadui.jpeg" alt="1">
-                    <span>Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <img  alt="1">
+                    <span class="name">Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i id="0" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
                 <div class="songItem">
-                    <img src="jadui.jpeg" alt="1">
-                    <span>Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <img  alt="2">
+                    <span class="name">Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i id="1" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
                 <div class="songItem">
-                    <img src="jadui.jpeg" alt="1">
-                    <span>Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <img  alt="1">
+                    <span class="name">Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i id="2" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
                 <div class="songItem">
-                    <img src="jadui.jpeg" alt="1">
-                    <span>Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <img  alt="1">
+                    <span class="name">Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i id="3" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
                 <div class="songItem">
-                    <img src="jadui.jpeg" alt="1">
-                    <span>Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <img alt="1">
+                    <span class="name">Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i id="4" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
                 <div class="songItem">
-                    <img src="jadui.jpeg" alt="1">
-                    <span>Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <img alt="1">
+                    <span class="name">Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i id="5" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
                 <div class="songItem">
-                    <img src="jadui.jpeg" alt="1">
-                    <span>Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <img alt="1">
+                    <span class="name">Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i id="6" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
                 <div class="songItem">
-                    <img src="jadui.jpeg" alt="1">
-                    <span>Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <img alt="1">
+                    <span class="name">Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i id="7" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
                 <div class="songItem">
-                    <img src="jadui.jpeg" alt="1">
-                    <span>Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i class="fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <img alt="1">
+                    <span class="name">Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i id="8" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
+                </div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="name">Jaadui</span>
+                    <span class="songlistplay"><span>3.42<i id="9" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
             </div>
         </div>
         <div class="songBanner"></div>
     </div>
     <div class="bottom">
-        <input type="range" name="range" id="myProgressBar" min="0" max="100">
+        <input type="range" name="range" id="myProgressBar" value="0" min="0" max="100">
         <div class="icons">
-            <i class="fa-2x fa-solid fa-backward"></i>
+            <i class="fa-2x fa-solid fa-backward" id="previous"></i>
             <i class="fa-2x fa-regular fa-circle-play" id="masterPlay"></i>
-            <i class="fa-2x fa-solid fa-forward"></i>
+            <i class="fa-2x fa-solid fa-forward" id="next"></i>
         </div>
         <div class="songInfo">
-            -Jaadui(Jubin Nautiyal)
+            <img src="giff.mp4" width="42px" id="gif"><span id="masterSongname"></span>
         </div>
     </div>
     <script src="https://kit.fontawesome.com/7fd55a2e46.js" crossorigin="anonymous"></script>
