--- a/index.html
+++ b/index.html
@@ -19,52 +19,62 @@
                 <div class="songItem">
                     <img  alt="1">
                     <span class="name">Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i id="0" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <span class="time-dur">3.42</span>
+                    <span class="songlistplay"><span><i id="0" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
                 <div class="songItem">
                     <img  alt="2">
                     <span class="name">Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i id="1" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <span class="time-dur">3.42</span>
+                    <span class="songlistplay"><span><i id="1" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
                 <div class="songItem">
                     <img  alt="1">
                     <span class="name">Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i id="2" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <span class="time-dur">3.42</span>
+                    <span class="songlistplay"><span><i id="2" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
                 <div class="songItem">
                     <img  alt="1">
                     <span class="name">Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i id="3" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <span class="time-dur">3.42</span>
+                    <span class="songlistplay"><span><i id="3" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
                     <span class="name">Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i id="4" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <span class="time-dur">3.42</span>
+                    <span class="songlistplay"><span><i id="4" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
                     <span class="name">Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i id="5" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <span class="time-dur">3.42</span>
+                    <span class="songlistplay"><span><i id="5" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
                     <span class="name">Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i id="6" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <span class="time-dur">3.42</span>
+                    <span class="songlistplay"><span><i id="6" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
                     <span class="name">Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i id="7" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <span class="time-dur">3.42</span>
+                    <span class="songlistplay"><span><i id="7" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
                     <span class="name">Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i id="8" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <span class="time-dur">3.42</span>
+                    <span class="songlistplay"><span><i id="8" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
                     <span class="name">Jaadui</span>
-                    <span class="songlistplay"><span>3.42<i id="9" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
+                    <span class="time-dur">3.42</span>
+                    <span class="songlistplay"><span><i id="9" class=" songItemPlay fa-regular fa-circle-play"></i></span class="duration"></span>
                 </div>
             </div>
         </div>
